OracleSOASuite/kubernetes/3.0.1/ingress-per-domain/tls/nginx-tls.yaml
# Copyright 2020, Oracle Corporation and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at
# https://oss.oracle.com/licenses/upl.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: soang-ingress
  namespace: soans
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - domain1.org
    secretName: domain1-tls-cert
  rules:
  - host: domain1.org
    http:
      paths:
      - path: 
        backend:
          serviceName: soainfra-cluster-soa-cluster
          servicePort: 8002
