OracleSOASuite/kubernetes/3.0.1/ingress-per-domain/tls/traefik-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: soa-cluster-routetcp
  namespace: soans
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`soainfra.example.org`)
    services:
    - name: soainfra-cluster-soa-cluster
      port: 8002
      weight: 3
      TerminationDelay: 400
  tls:
    passthrough: true
